--- a/default/app.conf
+++ b/default/app.conf
@@ -4,8 +4,8 @@
 is_configured = 0
 
 [ui]
-is_visible = 0
-label = Browser favicon changer 
+is_visible = 1
+label = Favicon changer 
 
 [launcher]
 author = Chris Younger
