--- a/default/app.conf
+++ b/default/app.conf
@@ -5,7 +5,7 @@ is_configured = 0
 
 [ui]
 is_visible = 1
-label = Favicon changer 
+label = Browser Icon Changer 
 
 [launcher]
 author = Chris Younger
