--- a/default/app.conf
+++ b/default/app.conf
@@ -1,6 +1,4 @@
-# Splunk app configuration file
-
-[install]
+ [install]
 is_configured = 0
 
 [ui]
@@ -9,5 +7,9 @@ label = Browser Icon Changer
 
 [launcher]
 author = Chris Younger
-description = 
+description = Browser Icon Changer
 version = 1.0.0
+
+[package]
+id = favicon_changer
+check_for_updates = true
